<resources>
    <string name="app_name">PresApp</string>

    <string name="tomas">Tomas de presión</string>
    <string name="perfilUsuarios">Perfil de Usuarios</string>
    <string name="historialTomas">Historial de tomas</string>
    <string name="salud">Tips de salud</string>
    <string name="numEmergencias">Números de emergencia</string>
    <string name="acercaDe">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="ing_juan_morris_lynott">Ing. Juan Morris Lynott</string>
    <string name="AcercadeText">La aplicación fue creada con el fin de que los usuarios tenga un control de la presión arterial, así como de informar y dar consejos sobre cómo mejorar su salud.</string>
    <string name="ing_william_m_ndez_barquero">Ing. William Méndez Barquero</string>
    <string name="ing_josue_mora_sibaja">Ing. Josue Mora Sibaja</string>
    <string name="todos_los_derechos_reservados_2017">Todos los derechos reservados © 2017</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="presapp">PresApp</string>
    <string name="TituloEmergencias">Números de emergencia Costa Rica</string>
    <string name="polic_a">Policía:</string>
    <string name="_117">117</string>
    <string name="cruz_roja">Cruz Roja:</string>
    <string name="bomberos">Bomberos:</string>
    <string name="_128">128</string>
    <string name="_118">118</string>
    <string name="ingresar">Ingresar</string>
    <string name="soy_nuevo">Soy nuevo</string>
    <string name="TxtLoginBienvenida">Controle su presión arterial y mejore su salud con PresApp</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="reg_strese_ahora">Regístrese ahora</string>
    <string name="ingrese_datos">Ingrese los datos que se le solicitan a continuación:</string>
    <string name="nombre">Nombre completo</string>
    <string name="correo">Correo electrónico</string>
    <string name="edad">Edad</string>
    <string name="peso_en_kg">Peso en kg</string>
    <string name="altura">Altura</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="sexo">Sexo</string>
    <string name="cancelar">CANCELAR</string>
    <string name="sali">SALIR</string>
    <string name="nom">Nombre:</string>
    <string name="edades">Edad:</string>
    <string name="peso">Peso:</string>
    <string name="altur">Altura:</string>
    <string name="sex">Sexo:</string>
    <string name="pass">Contraseña:</string>
    <string name="editar">EDITAR</string>
    <string name="controle_su_presi_n">¡Controle su presión!</string>
    <string name="fecha">Fecha</string>
    <string name="sist_lica">Sistólica</string>
    <string name="diast_lica">Diastólica</string>
    <string name="calcular">CALCULAR</string>
    <string name="perfil_de_usuario">PERFIL DE USUARIO</string>
    <string name="historial_de_tomas">Historial de tomas de presión</string>
    <string name="condici_n">Condición</string>
    <string name="sistolica">SISTÓLICA</string>
    <string name="diastolica">DIASTÓLICA</string>
    <string name="condicion">CONDICIÓN</string>
    <string name="c_dula">Cédula</string>
    <string name="TextoEducativo">Monitorear su presión regularmente, sin obsesionarse, procurando que esta revisión sea siempre a la misma hora y en condiciones semejantes. Es muy útil aprender a medir la tensión o contar con alguien que ayude a utilizar alguno de estos instrumentos: - Esfigmomanómetro, que se coloca en el brazo y en apariencia es similar a un reloj. - Baumanómetro, también conocido como barra de mercurio, el cual requiere el uso de estetoscopio. - Medidores de presión digitales, que son nuevos en el mercado, pero no siempre precisos.</string>
    <string name="TectoVerVideps">Arrastra hacia abajo hay mas videos</string>
    <string name="TIPS2">El ejercicio físico es de gran ayuda para mantener una presión (o tensión) arterial normal y estable. Existen varios estudios que demuestran esto. Incluso, una investigación reciente ha asociado el ejercicio físico con el efecto de la sal en la presión arterial (generalmente la eleva) y detectó que cuanto más actividad tenían las personas, menos efecto tenía la sal sobre la presión, que se mantenía baja.</string>
    <string name="titulo_hipertensi_n_arterial">Consejos para combatir la hipertensión arterial</string>
    <string name="es_importante">¡Es importante!</string>
    <string name="h_bitos_saludables">Hábitos saludables</string>
    <string name="un_peso_normal">- Mantenga un peso normal</string>
    <string name="ejercicio_todos">-Haga ejercicio todos los días</string>
    <string name="dieta_sana">-Dieta sana</string>
    <string name="consuma_menos_sal">-Consuma menos sal</string>
    <string name="beba_menos_alcohol">-Beba menos alcohol</string>

    <string-array name="sexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    //para el video de youtube


</resources>
