<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="una.ac.cr.git.Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/presapp"
        android:textColor="#128DBE"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginLeft="146dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="31dp"
        android:background="@color/celeste"
        android:fontFamily="sans-serif"
        android:onClick="Ingresar"
        android:text="@string/ingresar"
        android:textColor="#fff"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="136dp"
        android:layout_height="176dp"
        app:srcCompat="@drawable/salud"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="39dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="198dp"
        android:text="@string/TxtLoginBienvenida"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="189dp"
        android:layout_height="28dp"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="16dp"
        android:text="@string/no_tienes_una_cuenta"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="507dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="152dp"
        android:layout_height="27dp"
        android:clickable="true"
        android:linksClickable="true"
        android:onClick="RegistrarUsuarios"
        android:text="@string/reg_strese_ahora"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView15"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="34dp"
        app:layout_constraintHorizontal_bias="0.081"
        tools:layout_editor_absoluteY="506dp" />

</android.support.constraint.ConstraintLayout>
