<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="una.ac.cr.git.PerfilUsuario">

    <!--Menu principal -->
    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/perfil_de_usuario"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="62dp"
        android:text="@string/presapp"
        android:textColor="#128DBE"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="39dp"
        android:text="@string/nom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edades"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altur"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        android:layout_marginLeft="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        android:layout_marginLeft="65dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/celeste"
        android:onClick="MostrarDatos"
        android:text="Aceptar"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="132dp"
        android:layout_height="22dp"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:layout_constraintLeft_toRightOf="@+id/textView24"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txtEdad"
        android:layout_width="133dp"
        android:layout_height="21dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        app:layout_constraintLeft_toRightOf="@+id/textView25"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="134dp"
        android:layout_height="22dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="23dp"
        app:layout_constraintLeft_toRightOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/txtEdad" />

    <TextView
        android:id="@+id/txtAltura"
        android:layout_width="133dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toRightOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="133dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        app:layout_constraintLeft_toRightOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/txtAltura" />

    <TextView
        android:id="@+id/txtClave"
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/txtSexo"
        app:layout_constraintLeft_toRightOf="@+id/textView29"
        android:layout_marginLeft="10dp" />


</android.support.constraint.ConstraintLayout>
